--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@
     <div class="ads"></div>
     <div id="clockcontainer">
       <div id="h1">
-        <img src="/1.png" alt="" />
+        <img src="/1.png" alt="" class="h1" />
       </div>
       <div id="h2">
-        <img src="/1.png" alt="" />
+        <img src="/1.png" alt="" class="h2" />
       </div>
       <div class="dot">
         <img src="/dot.png" alt="" />
       </div>
       <div id="m1">
-        <img src="/2.png" alt="" />
+        <img src="/2.png" alt="" class="m1" />
       </div>
       <div id="m2">
-        <img src="/1.png" alt="" />
+        <img src="/1.png" alt="" class="m2" />
       </div>
       <div class="dot">
         <img src="/dot.png" alt="" />
       </div>
       <div id="s1">
-        <img src="/3.png" alt="" />
+        <img src="/3.png" alt="" class="s1" />
       </div>
       <div id="s2">
-        <img src="/2.png" alt="" />
+        <img src="/2.png" alt="" class="s2" />
       </div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
