--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- <div class="ads"></div> -->
+    <div class="ads"></div>
     <div id="clockcontainer">
       <div id="h1">
-        <img src="/off.png" alt="" class="h1" />
+        <img src="off.png" alt="" class="h1" />
       </div>
       <div id="h2">
-        <img src="/off.png" alt="" class="h2" />
+        <img src="off.png" alt="" class="h2" />
       </div>
       <div class="dot">
-        <img src="/dot.png" alt="" />
+        <img src="dot.png" alt="" />
       </div>
       <div id="m1">
-        <img src="/off.png" alt="" class="m1" />
+        <img src="off.png" alt="" class="m1" />
       </div>
       <div id="m2">
-        <img src="/off.png" alt="" class="m2" />
+        <img src="off.png" alt="" class="m2" />
       </div>
       <div class="dot">
-        <img src="/dot.png" alt="" />
+        <img src="dot.png" alt="" />
       </div>
       <div id="s1">
-        <img src="/off.png" alt="" class="s1" />
+        <img src="off.png" alt="" class="s1" />
       </div>
       <div id="s2">
-        <img src="/off.png" alt="" class="s2" />
+        <img src="off.png" alt="" class="s2" />
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
   </body>
 </html>
