--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="img/off.png" alt="" class="h2" />
       </div>
       <div class="dot">
-        <img src="/img/dot.png" alt="" />
+        <img src="img/dot.png" alt="" />
       </div>
       <div id="m1">
         <img src="img/off.png" alt="" class="m1" />
